# template-development-environment-python

./: .gitignore  .pdm-python  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.override.yaml  docker-compose.yaml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
.docker/: entrypoint.sh
.docker/zsh/powerlevel10k/: .p10k.zsh
